--- a/src/style.css
+++ b/src/style.css
@@ -126,6 +126,7 @@ input[type="submit"]:hover {
   flex-direction: column;
   margin: 0;
   padding: 0;
+  color: white;
 }
 
 .sidebar {
@@ -250,18 +251,37 @@ chat box starts here */
   margin: auto;
 }
 
+.msg-text-box{
+  display: flex;
+}
+
 .msg-text-box p {
   padding: 0;
   margin: 0;
   margin-left: 1em;
 }
 
-.msg-text-box .bubble {
-  background-color: rgb(190, 231, 227);
+.msg-text-box .ingoing {
+  /* background-color: rgb(190, 231, 227); */
+  background-color: white;
   width: 100%;
-  height: 2em;
-  padding: 5px;
-  border-radius: 10px;
+  height: 3em;
+  padding: 6px;
+  border-radius: 18px 18px 18px 0 ;
+  color: black;
+  margin-bottom: 2em;
+}
+
+.msg-text-box .outgoing {
+  /* background-color: rgb(190, 231, 227); */
+  background-color: rgb(86, 86, 249);
+  width: 100%;
+  height: 3em;
+  padding: 6px;
+  border-radius: 18px 18px 0 18px ;
+  color: white;
+  justify-content: flex-start;
+  margin-bottom: 2em;
 }
 
 .chat-date {
